--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "xlsx": "^0.15.5"
   },
   "dependencies": {
+    "@azure/storage-blob": "^12.1.1",
     "@hapi/joi": "^16.1.8",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
