--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,7 @@
     "block-scoped-var": "error",
     "curly": ["error"],
     "default-case": "error",
-    "dot-notation":["error", { "allowPattern": "^[a-z]+(_[a-z]+)+$" }],
+    "dot-notation":["error", { "allowPattern": "_+" }],
     "eqeqeq": "error",
     "no-alert": "error",
     "no-caller": "error",
@@ -60,7 +60,7 @@
     "strict": ["error", "never"],
     "no-undef": "error",
     "no-undef-init": "error",
-    "no-unused-vars": ["warn", { "varsIgnorePattern": "[iI]gnored[0-9]*" }],
+    "no-unused-vars": ["warn", { "varsIgnorePattern": "[iI]gnored[0-9]*", "argsIgnorePattern": "[iI]gnored[0-9]*" }],
     "array-bracket-newline": ["warn", "consistent"],
     "array-bracket-spacing": ["warn", "never"],
     "block-spacing": "warn",
