--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "circular-dependency-plugin": "^5.2.0",
     "classnames": "^2.2.6",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.1.1",
+    "copy-webpack-plugin": "^6.0.1",
     "core-js": "^3.6.5",
     "cross-env": "^7.0.2",
     "css-loader": "^3.5.3",
@@ -38,8 +38,8 @@
     "eslint-import-resolver-node": "^0.3.3",
     "eslint-import-resolver-webpack": "^0.12.1",
     "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^4.0.0",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4.0.2",
     "file-dialog": "0.0.8",
     "file-loader": "^6.0.0",
     "less-loader": "^6.1.0",
@@ -47,8 +47,6 @@
     "moment-locales-webpack-plugin": "^1.2.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "patch-package": "^6.2.2",
-    "postcss-custom-media": "^7.0.8",
-    "postcss-loader": "^3.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-day-picker": "^7.4.8",
@@ -57,7 +55,7 @@
     "react-hot-loader": "^4.12.21",
     "react-rangeslider": "^2.2.0",
     "react-redux": "^7.2.0",
-    "react-router-dom": "^5.1.2",
+    "react-router-dom": "^5.2.0",
     "react-virtualized": "^9.21.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
@@ -65,13 +63,13 @@
     "search-parser": "^0.1.19",
     "semantic-ui-less": "^2.4.1",
     "semantic-ui-react": "^0.88.2",
-    "tachyons-custom": "4.9.6",
+    "tachyons": "^4.12.0",
     "terser-webpack-plugin": "^3.0.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-hot-middleware": "^2.25.0",
-    "xlsx": "^0.16.0"
+    "xlsx": "^0.16.1"
   },
   "dependencies": {
     "@azure/storage-blob": "^12.1.1",
@@ -83,13 +81,13 @@
     "lodash": "^4.17.15",
     "mjml": "^4.6.3",
     "moment": "^2.25.3",
-    "nanoid": "^3.1.3",
+    "nanoid": "^3.1.8",
     "nodemailer": "^6.4.6",
     "parse": "^2.12.0",
     "parse-dashboard": "^2.1.0",
     "parse-server": "^4.2.0",
     "query-string": "^6.12.1",
     "react-sortable-hoc": "^1.11.0",
-    "sharp": "^0.25.2"
+    "sharp": "^0.25.3"
   }
 }
