+ sections creation and editing

--- a/template.env
+++ b/template.env
@@ -5,7 +5,7 @@ export APP_ADMIN_PATH=/admin
 export APP_LOGO_URL=https://interaktion.x-evolvers.com/logo.975be81faacf8d8bdc2754a626a23a21.png
 export APP_FAVICON_URL=https://interaktion.x-evolvers.com/favicon.5bffdf017ade2a1758bfe5f5ef73637a.png
 export APP_CURRENCY=USD
-export APP_LOCALE=en-US
+export APP_LOCALE=en
 
 export PARSE_PATH=/api
 export PARSE_APPID=interaktion-admin-tool
