--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
   "author": "elios264",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.9.6",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/preset-env": "^7.9.6",
-    "@babel/preset-react": "^7.9.4",
+    "@babel/core": "^7.11.4",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/preset-env": "^7.11.0",
+    "@babel/preset-react": "^7.10.4",
     "@hot-loader/react-dom": "^16.13.0",
+    "@udecode/slate-plugins": "^0.66.4",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "circular-dependency-plugin": "^5.2.0",
@@ -62,7 +63,11 @@
     "reselect": "^4.0.0",
     "search-parser": "^0.1.19",
     "semantic-ui-less": "^2.4.1",
-    "semantic-ui-react": "^0.88.2",
+    "semantic-ui-react": "^1.2.1",
+    "slate": "^0.58.4",
+    "slate-history": "^0.58.4",
+    "slate-hyperscript": "^0.58.4",
+    "slate-react": "^0.58.4",
     "tachyons": "^4.12.0",
     "terser-webpack-plugin": "^3.0.1",
     "webpack": "^4.43.0",
