--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "@hapi/joi": "^16.1.8",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "cron": "^1.8.2",
     "env2": "^2.2.2",
     "express": "^4.17.1",
     "lodash": "^4.17.15",
