--- a/package.json
+++ b/package.json
@@ -19,45 +19,46 @@
   "author": "elios264",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.11.4",
+    "@babel/core": "^7.11.6",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/preset-env": "^7.11.0",
+    "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
     "@hot-loader/react-dom": "^16.13.0",
-    "@udecode/slate-plugins": "^0.66.4",
+    "@udecode/slate-plugins": "^0.66.8",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "circular-dependency-plugin": "^5.2.0",
     "classnames": "^2.2.6",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^6.0.1",
+    "copy-webpack-plugin": "^6.0.3",
     "core-js": "^3.6.5",
     "cross-env": "^7.0.2",
-    "css-loader": "^3.5.3",
+    "css-loader": "^4.2.1",
     "downscale": "^1.0.6",
-    "eslint": "^7.0.0",
-    "eslint-import-resolver-node": "^0.3.3",
-    "eslint-import-resolver-webpack": "^0.12.1",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-react": "^7.20.0",
-    "eslint-plugin-react-hooks": "^4.0.2",
+    "eslint": "^7.7.0",
+    "eslint-import-resolver-node": "^0.3.4",
+    "eslint-import-resolver-webpack": "^0.12.2",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-react-hooks": "^4.1.0",
     "file-dialog": "0.0.8",
-    "file-loader": "^6.0.0",
-    "less-loader": "^6.1.0",
-    "mini-css-extract-plugin": "^0.9.0",
+    "file-loader": "^6.1.0",
+    "less": "^3.12.2",
+    "less-loader": "^7.0.1",
+    "mini-css-extract-plugin": "^0.10.1",
     "moment-locales-webpack-plugin": "^1.2.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
     "patch-package": "^6.2.2",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-day-picker": "^7.4.8",
     "react-dom": "^16.13.1",
-    "react-helmet": "^6.0.0",
+    "react-helmet": "^6.1.0",
     "react-hot-loader": "^4.12.21",
     "react-rangeslider": "^2.2.0",
-    "react-redux": "^7.2.0",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
-    "react-virtualized": "^9.21.2",
+    "react-virtualized": "^9.22.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
@@ -69,31 +70,31 @@
     "slate-hyperscript": "^0.58.4",
     "slate-react": "^0.58.4",
     "tachyons": "^4.12.0",
-    "terser-webpack-plugin": "^3.0.1",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
+    "terser-webpack-plugin": "^4.1.0",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-hot-middleware": "^2.25.0",
-    "xlsx": "^0.16.1"
+    "xlsx": "^0.16.6"
   },
   "dependencies": {
-    "@azure/storage-blob": "^12.1.1",
+    "@azure/storage-blob": "^12.1.2",
     "@hapi/joi": "^16.1.8",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "cron": "^1.8.2",
     "env2": "^2.2.2",
     "express": "^4.17.1",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.20",
     "mjml": "^4.6.3",
-    "moment": "^2.25.3",
-    "nanoid": "^3.1.8",
-    "nodemailer": "^6.4.6",
-    "parse": "^2.12.0",
+    "moment": "^2.27.0",
+    "nanoid": "^3.1.12",
+    "nodemailer": "^6.4.11",
+    "parse": "^2.15.0",
     "parse-dashboard": "^2.1.0",
-    "parse-server": "^4.2.0",
-    "query-string": "^6.12.1",
+    "parse-server": "^4.3.0",
+    "query-string": "^6.13.1",
     "react-sortable-hoc": "^1.11.0",
-    "sharp": "^0.25.3"
+    "sharp": "^0.25.4"
   }
 }
