--- a/template.env
+++ b/template.env
@@ -2,8 +2,8 @@ export APP_PORT=80
 export APP_URL=http://localhost
 export APP_NAME=Interaktion V2
 export APP_ADMIN_PATH=/admin
-export APP_LOGO_URL=https://interaktion.x-evolvers.com/logo.975be81faacf8d8bdc2754a626a23a21.png
-export APP_FAVICON_URL=https://interaktion.x-evolvers.com/favicon.5bffdf017ade2a1758bfe5f5ef73637a.png
+export APP_LOGO_URL=https://dummyimage.com/150x50/000/fff.png&text=Interaktion
+export APP_FAVICON_URL=https://dummyimage.com/32x32/000/fff.png&text=I
 export APP_CURRENCY=USD
 export APP_LOCALE=en
 
