+ update email settings

--- a/template.env
+++ b/template.env
@@ -13,8 +13,8 @@ export PARSE_MASTER_KEY=5808256a5a3c429d91a7aea9a9e772b4
 export PARSE_STORAGE=mongodb+srv://lwm-user:RuLCHN7a9ywtMLIM@cluster0.u0jgi.gcp.mongodb.net/interaktion?retryWrites=true&w=majority
 export PARSE_DASHBOARD_PASS=$2y$12$F2i.pKUGZki4TvtarpxkTeZ0eYp4sVdHjXH1ZR0WgQz8ub3hBQumK
 
-export EMAIL_SENDER=postmaster@sandboxe747ab11855949eebcd6fefcb36dc8d1.mailgun.org
-export EMAIL_USER=postmaster@sandboxe747ab11855949eebcd6fefcb36dc8d1.mailgun.org
-export EMAIL_PASSWORD=b4a278335768b972f61895c75e07cabc-9a235412-a73748ba
-export EMAIL_HOST=smtp.mailgun.org
-export EMAIL_PORT=587
+export EMAIL_SENDER=info@luxuryworldmadrid.es
+export EMAIL_USER=info@luxuryworldmadrid.es
+export EMAIL_PASSWORD=@t2HXJr5Ef^c_)da
+export EMAIL_HOST=smtpout.secureserver.net
+export EMAIL_PORT=80
