+ allow scheme for opening + language for user + localization for email

--- a/template.env
+++ b/template.env
@@ -6,6 +6,7 @@ export APP_LOGO_URL=https://dummyimage.com/150x50/000/fff.png&text=Interaktion
 export APP_FAVICON_URL=https://dummyimage.com/32x32/000/fff.png&text=I
 export APP_CURRENCY=USD
 export APP_LOCALE=en
+export APP_SCHEME_PREFIX=interaktion://
 
 export PARSE_PATH=/api
 export PARSE_APPID=interaktion-admin-tool
