--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "cors": "^2.8.5",
     "cron": "^1.8.2",
     "env2": "^2.2.2",
+    "expo-server-sdk": "^3.6.0",
     "express": "^4.17.1",
     "lodash": "^4.17.20",
     "mjml": "^4.6.3",
