--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
   "author": "elios264",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-react": "^7.10.4",
+    "@babel/core": "^7.12.3",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-react": "^7.12.1",
     "@hot-loader/react-dom": "^16.13.0",
     "@udecode/slate-plugins": "^0.66.8",
     "babel-eslint": "^10.1.0",
@@ -78,14 +78,14 @@
     "xlsx": "^0.16.6"
   },
   "dependencies": {
-    "@azure/storage-blob": "^12.1.2",
-    "@hapi/joi": "^16.1.8",
+    "@azure/storage-blob": "^12.2.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "cron": "^1.8.2",
     "env2": "^2.2.2",
     "expo-server-sdk": "^3.6.0",
     "express": "^4.17.1",
+    "joi": "^17.2.1",
     "lodash": "^4.17.20",
     "mjml": "^4.6.3",
     "moment": "^2.27.0",
