--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,6 +4,10 @@
     "module": "es2015",
     "jsx": "react",
     "baseUrl": "./src",
-    "experimentalDecorators": true
-  }
+    "experimentalDecorators": true,
+  },
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
