--- a/package.json
+++ b/package.json
@@ -25,30 +25,33 @@
     "@babel/preset-react": "^7.12.1",
     "@hot-loader/react-dom": "^16.13.0",
     "@udecode/slate-plugins": "^0.66.8",
+    "assets-webpack-plugin": "^6.0.3",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
-    "circular-dependency-plugin": "^5.2.0",
     "classnames": "^2.2.6",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^6.0.3",
+    "copy-webpack-plugin": "^6.2.1",
     "core-js": "^3.6.5",
     "cross-env": "^7.0.2",
-    "css-loader": "^4.2.1",
+    "crypto-browserify": "^3.12.0",
+    "css-loader": "^4.3.0",
+    "css-minimizer-webpack-plugin": "^1.1.5",
     "downscale": "^1.0.6",
     "eslint": "^7.7.0",
     "eslint-import-resolver-node": "^0.3.4",
-    "eslint-import-resolver-webpack": "^0.12.2",
+    "eslint-import-resolver-webpack": "^0.13.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-react-hooks": "^4.1.0",
     "file-dialog": "0.0.8",
-    "file-loader": "^6.1.0",
+    "file-loader": "^6.1.1",
     "less": "^3.12.2",
     "less-loader": "^7.0.1",
-    "mini-css-extract-plugin": "^0.10.1",
+    "mini-css-extract-plugin": "^1.2.0",
     "moment-locales-webpack-plugin": "^1.2.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.4",
     "patch-package": "^6.2.2",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-day-picker": "^7.4.8",
@@ -69,10 +72,11 @@
     "slate-history": "^0.58.4",
     "slate-hyperscript": "^0.58.4",
     "slate-react": "^0.58.4",
+    "stream-browserify": "^3.0.0",
     "tachyons": "^4.12.0",
-    "terser-webpack-plugin": "^4.1.0",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
+    "terser-webpack-plugin": "^5.0.1",
+    "webpack": "^5.2.0",
+    "webpack-cli": "^4.1.0",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-hot-middleware": "^2.25.0",
     "xlsx": "^0.16.6"
