--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -172,6 +172,7 @@
     "import/no-dynamic-require": "error",
     "import/no-extraneous-dependencies": "error",
     "import/first": "error",
-    "import/no-duplicates": "error"
+    "import/no-duplicates": "error",
+    "react/react-in-jsx-scope": "off"
   }
 }
