--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "cross-env NODE_ENV=development node ./server.js",
     "start:debug": "cross-env NODE_ENV=development node --inspect ./server.js",
     "start:prod": "cross-env NODE_ENV=production node ./server.js",
-    "lint": "eslint --fix ./src ./server --color",
+    "lint": "eslint --fix ./src ./server",
     "build": "cross-env NODE_ENV=production webpack",
     "prestart": "npm run lint",
     "prebuild": "npm run lint"
@@ -37,12 +37,14 @@
     "css-loader": "^4.3.0",
     "css-minimizer-webpack-plugin": "^1.1.5",
     "downscale": "^1.0.6",
-    "eslint": "^7.7.0",
+    "eslint": "^7.11.0",
+    "eslint-config-airbnb": "^18.2.0",
     "eslint-import-resolver-node": "^0.3.4",
     "eslint-import-resolver-webpack": "^0.13.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-react": "^7.20.6",
-    "eslint-plugin-react-hooks": "^4.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "file-dialog": "0.0.8",
     "file-loader": "^6.1.1",
     "less": "^3.12.2",
