--- a/hooks/build
+++ b/hooks/build
@@ -1,2 +1,3 @@
 #!/bin/bash
-docker build  --build-arg SOURCE_COMMIT=$SOURCE_COMMIT --build-arg ENVIRONMENT=$ENVIRONMENT -f $DOCKERFILE_PATH -t $IMAGE_NAME .
+docker build  --build-arg SOURCE_COMMIT=${SOURCE_COMMIT:0:8} --build-arg ENVIRONMENT=$ENVIRONMENT -f $DOCKERFILE_PATH -t $IMAGE_NAME .
+
