--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,6 +22,6 @@ jobs:
       id: vars
       run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag latest -t luxury-world-madrid --build-arg ENVIRONMENT=prod-lwm --build-arg SOURCE_COMMIT=${{steps.vars.outputs.sha_short}}
+      run: docker build . --file Dockerfile -t luxury-world-madrid --build-arg ENVIRONMENT=prod-lwm --build-arg SOURCE_COMMIT=${{steps.vars.outputs.sha_short}}
     - name: Docker Push
-      run: docker push $DOCKER_USER/luxury-world-madrid
+      run: docker push ${DOCKER_USER}/luxury-world-madrid
