--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,4 +24,4 @@ jobs:
     - name: Build the Docker image
       run: docker build . --file Dockerfile -t luxury-world-madrid --build-arg ENVIRONMENT=prod-lwm --build-arg SOURCE_COMMIT=${{steps.vars.outputs.sha_short}}
     - name: Docker Push
-      run: docker push ${{secrets.DOCKER_USER_LWM}}/luxury-world-madrid
+      run: docker push ${{secrets.DOCKER_USER_LWM}}/luxury-world-madrid:latest
