--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,9 +21,8 @@ jobs:
     - name: Set outputs
       id: vars
       run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
-    # - name: Build the Docker image
-    #   run: docker build . --file Dockerfile -t ${{secrets.DOCKER_USER_LWM}}/luxury-world-madrid --build-arg ENVIRONMENT=prod-lwm --build-arg SOURCE_COMMIT=${{steps.vars.outputs.sha_short}}
+    - name: Build the Docker image
+      run: docker build . --file Dockerfile -t ${{secrets.DOCKER_USER_LWM}}/luxury-world-madrid --build-arg ENVIRONMENT=prod-lwm --build-arg SOURCE_COMMIT=${{steps.vars.outputs.sha_short}}
     - name: Docker Push
       run: |
-        echo ${{secrets.DOCKER_USER_LWM}}/luxury-world-madrid:latest
         docker push ${{secrets.DOCKER_USER_LWM}}/luxury-world-madrid:latest
