--- a/package.json
+++ b/package.json
@@ -19,26 +19,26 @@
   "author": "elios264",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.12.3",
+    "@babel/core": "^7.12.9",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/preset-env": "^7.12.1",
-    "@babel/preset-react": "^7.12.1",
-    "@hot-loader/react-dom": "^17.0.0",
+    "@babel/preset-env": "^7.12.7",
+    "@babel/preset-react": "^7.12.7",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "@udecode/slate-plugins": "^0.67.4",
-    "assets-webpack-plugin": "^6.0.3",
+    "assets-webpack-plugin": "^6.1.0",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.1.0",
+    "babel-loader": "^8.2.2",
     "classnames": "^2.2.6",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^6.2.1",
-    "core-js": "^3.6.5",
-    "cross-env": "^7.0.2",
+    "copy-webpack-plugin": "^6.3.2",
+    "core-js": "^3.8.0",
+    "cross-env": "^7.0.3",
     "crypto-browserify": "^3.12.0",
-    "css-loader": "^5.0.0",
+    "css-loader": "^5.0.1",
     "css-minimizer-webpack-plugin": "^1.1.5",
     "downscale": "^1.0.6",
-    "eslint": "^7.12.1",
-    "eslint-config-airbnb": "^18.2.0",
+    "eslint": "^7.15.0",
+    "eslint-config-airbnb": "^18.2.1",
     "eslint-import-resolver-node": "^0.3.4",
     "eslint-import-resolver-webpack": "^0.13.0",
     "eslint-plugin-import": "^2.22.1",
@@ -48,8 +48,8 @@
     "file-dialog": "0.0.8",
     "file-loader": "^6.2.0",
     "less": "^3.12.2",
-    "less-loader": "^7.0.2",
-    "mini-css-extract-plugin": "^1.2.1",
+    "less-loader": "^7.1.0",
+    "mini-css-extract-plugin": "^1.3.2",
     "moment-locales-webpack-plugin": "^1.2.0",
     "patch-package": "^6.2.2",
     "path-browserify": "^1.0.1",
@@ -59,9 +59,9 @@
     "react-day-picker": "^7.4.8",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "react-hot-loader": "^4.13.0",
     "react-rangeslider": "^2.2.0",
     "react-redux": "^7.2.2",
+    "react-refresh": "^0.9.0",
     "react-router-dom": "^5.2.0",
     "react-virtualized": "^9.22.2",
     "redux": "^4.0.5",
@@ -77,14 +77,14 @@
     "stream-browserify": "^3.0.0",
     "tachyons": "^4.12.0",
     "terser-webpack-plugin": "^5.0.3",
-    "webpack": "^5.3.1",
-    "webpack-cli": "^4.1.0",
-    "webpack-dev-middleware": "^4.0.0",
+    "webpack": "^5.10.0",
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-middleware": "^4.0.2",
     "webpack-hot-middleware": "^2.25.0",
-    "xlsx": "^0.16.8"
+    "xlsx": "^0.16.9"
   },
   "dependencies": {
-    "@azure/storage-blob": "^12.2.1",
+    "@azure/storage-blob": "^12.3.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "cron": "^1.8.2",
@@ -95,13 +95,13 @@
     "lodash": "^4.17.20",
     "mjml": "^4.7.1",
     "moment": "^2.29.1",
-    "nanoid": "^3.1.16",
-    "nodemailer": "^6.4.14",
-    "parse": "^2.17.0",
+    "nanoid": "^3.1.20",
+    "nodemailer": "^6.4.16",
+    "parse": "^2.18.0",
     "parse-dashboard": "^2.1.0",
-    "parse-server": "^4.3.0",
-    "query-string": "^6.13.6",
+    "parse-server": "^4.4.0",
+    "query-string": "^6.13.7",
     "react-sortable-hoc": "^1.11.0",
-    "sharp": "^0.26.2"
+    "sharp": "^0.26.3"
   }
 }
